--- a/server/package.json
+++ b/server/package.json
@@ -5,15 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "apollo-server": "^3.6.7",
+    "apollo-server-express": "^3.6.7",
     "express": "^4.18.1",
-    "graphql": "^16.4.0"
+    "graphql": "^16.4.0",
+    "mongoose": "^6.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
