--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
-    "apollo-server-express": "^3.6.7",
+    "apollo-server": "^3.6.7",
+    "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "graphql": "^16.4.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2"
   },
   "devDependencies": {
