--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.0.0",
     "firebase": "^9.7.0",
     "graphql": "^16.4.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
